# knowledge-graph

./: .gitignore  pyproject.toml
src/knowledge_graph/: __init__.py  cli.py  downloader.py  transcribe.py
