[project]
name = "knowledge-graph"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey Dronov",email = "alexdronov02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "yt-dlp (>=2025.9.5,<2026.0.0)",
    "openai-whisper (>=20250625,<20250626)",
    "spacy (>=3.8.7,<4.0.0)",
    "networkx (>=3.5,<4.0)",
    "pyvis (>=0.3.2,<0.4.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "typer (>=0.17.4,<0.18.0)"
]

[tool.poetry]
packages = [{include = "knowledge_graph", from = "src"}]

[tool.poetry.scripts]
kg = "knowledge_graph.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.13.0,<0.14.0)",
    "isort (>=6.0.1,<7.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "mypy (>=1.18.1,<2.0.0)"
]